debug a page layout issue

--- a/style.css
+++ b/style.css
@@ -1,9 +1,16 @@
+:root {
+    --color-light: #fff;
+    --page-bg-color: #555;
+    --button-bg-color: #aaa;
+    --button-fg-color: #fff;
+}
 body {
     position: absolute;
     top: 0;
     left: 0;
     right: 0;
-    bottom: 0;
+    width: 100%;
+    height: 100%;
     margin: 0;
     padding: 0;
 }
@@ -26,8 +33,44 @@ body {
     display: flex;
     flex-shrink: 1;
 }
-
+.page_bg {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: var(--page-bg-color);
+}
+.page {
+    background-color: var(--color-light);
+    width: 8.5in;
+    height: 11in;
+    margin: 0;
+    padding: .5in;
+}
+.overlay {
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    background-color: var(--color-light);
+    padding: 1vmin;
+    margin: 1vmin;
+    border-radius: 1vmin;
+}
+.button {
+    border-radius: 0.5vmin;
+    color: var(--button-fg-color);
+    background-color: var(--button-bg-color);
+    padding: 1vmin;
+    margin: 0.5vmin;
+    text-align: center;
+    font-weight: bold;
+}
 @media print {
+    body, .page_bg {
+        width: auto;
+        height: auto;
+    }
     body * {
         visibility: hidden;
         position: absolute;
@@ -37,20 +80,4 @@ body {
         visibility: visible;
         position: static;
     }
-}
-.page_bg {
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: #555;
-}
-.page {
-    background-color: white;
-    width: 8.5in;
-    height: 11in;
-    margin: 0;
-    padding: .5in;
-    break-after: page;
 }
